message("-- Inside Examples directory")
# add_executable(spmc_test spmc_test.cpp)
# target_link_libraries(spmc_test ps)

# add_executable(MTReadWrite MultiThreadedParamReadWrites.cpp)
# target_link_libraries( MTReadWrite ps)

# add_executable(Paramserver_test Paramserver_test.cpp)
# target_link_libraries(Paramserver_test ps)

add_executable(eigen_test eigen_test.cpp)